--- a/src/app/paginas/empleados/empleados.component.html
+++ b/src/app/paginas/empleados/empleados.component.html
@@ -11,7 +11,7 @@
 </div>
 
 
-<table class="table table-hover mt-3 animated fadeIn faster" *ngIf="!cargando && empleados.length > 0">
+<table class="table table-responsive table-hover mt-3 animated fadeIn faster" *ngIf="!cargando && empleados.length > 0">
     <thead>
         <tr>
             <th scope="col">#</th>
